--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
           
             <div class="weather-app-temparature-container"> 
-              <div class="weather-app-icon">☁️</div> 
+              <div class="weather-app-icon"></div> 
               <div class="weather-app-temparature-value" id="weather-value"></div>
               <div class="weather-app-unit">°C</div>
             </div>
@@ -44,8 +44,8 @@
         <p>
           This project was coded by
           <a href="https://github.com/lebakammabatho?tab=repositories" target="_blank">Mmabatho Lebaka</a> <br> and is
-          <a href="https://github.com/lebakammabatho/week-7-homework" target="_blank"> on GitHub</a> and
-          <a href="https://steady-youtiao-6c7b67.netlify.app/" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/lebakammabatho/week-8-project" target="_blank"> on GitHub</a> and
+          <a href="https://polite-madeleine-729cca.netlify.app" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
                      
